[package]
name = "test-loop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
block-padding = "0.3.2"
clap = { version = "3.0", features = ["cargo"] }
hex = "0.4.3"
parse_int = "0.6.0"
sha2 = "0.10.6"
